--- a/browserwindow.ui
+++ b/browserwindow.ui
@@ -110,8 +110,8 @@ QScrollBar::add-line:vertical
 
 QMenu 
 {
-	background-color: #393939;
-/*	background: #393939;*/
+    background-color: #393939;
+    border: 1px solid #000000;
 }
 
 QTabBar::tab
@@ -213,7 +213,7 @@ QScrollBar::add-line:horizontal
         <number>0</number>
        </property>
        <item>
-        <widget class="QPushButton" name="newTabButton">
+        <widget class="K9PushButton" name="newTabButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
            <horstretch>0</horstretch>
